# Ssgs-ji-retrieval-based-model

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt  serve_http.py  server.json
demo/backend/: main.py  requirements.txt
docs/: claude.md  codex.md  distribution.md  mcp-inspector.md  publishing.md
scripts/: build_index.py  extract_multilingual.py
src/: mcp_server.py  search_engine.py
src/sggs_mcp/: __init__.py  build_index.py  cli.py  config.py  extract_multilingual.py  search_engine.py  server.py
tests/: test_smoke.py
