[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sggs-mcp"
version = "0.1.0"
description = "MCP retrieval server for multilingual Sri Guru Granth Sahib Ji search."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "SGGS MCP contributors" }
]
keywords = ["mcp", "gurbani", "sikh", "retrieval", "semantic-search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Religion",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "mcp>=1.0.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
sggs-mcp = "sggs_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
